# paddleocr_tbd

./: .gitignore  README.md  main.py  pyproject.toml
tests/notebooks/: test_paddleocr.ipynb
